log
Thu 11 May 2023 04:25:28 PM UTC: 
 tests:  0|4
total_score: 0/70
b8080f9
Thu 11 May 2023 04:49:16 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
5c6e060
Thu 11 May 2023 04:50:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cdb2e4f
Thu 11 May 2023 05:00:29 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:35: error: subscripted value is neither array nor pointer nor vector
   22 |     return pq->heapArray->priority[0];
      |                                   ^
heap.c:21:14: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   21 |     heapElem heapArray;
      |              ^~~~~~~~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d52285
